5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1834_1276.log
== SUBMITION (2019-07-09 14:39:31) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)
-- EXECUTION TIME:
0.694163
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 6
    w = zeros(y, dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:39:48) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("wqid:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)
-- EXECUTION TIME:
0.802185
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("wqid:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)
-- EXECUTION TIME:
0.659183
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:40:16) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("wqid:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)
-- EXECUTION TIME:
0.788422
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:41:26) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("hsd:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)

-- EXECUTION TIME:
0.701046
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:46:01) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("hsd:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

mov = input("Movimentos: ").upper()
x = 0
y = 0
mo = 0
hp = 100

for i in mov:
	if i == "A":
		if x-1 != -1:
			if t[y,x-1] != 33:
				x -= 1
	elif i == "D":
		if x + 1 != b:
			if t[y,x+1] != 33:
				x += 1
	elif i == "W":
		if y - 1 != -1:
			if t[y-1,x] != 33:
				y -= 1
	elif i == "S":
		if y + 1 != a:
			if t[y+1,x] != 33:
				y += 1
	if t[y,x] == 11:
		mo += 1
		t[y,x] = 0
	elif t[y,x] == 22:
		hp -= 5
print("posicao x: ",x)
print("posicao y: ",y)
print("moedas: ",mo)
print("life: ",hp)

-- EXECUTION TIME:
0.803636
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:46:44) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("hsd:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	

-- EXECUTION TIME:
0.694275
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:46:52) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

-- EXECUTION TIME:
0.697567
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 6
    w = zeros(y, dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:47:11) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("adhs:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
deix
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

-- EXECUTION TIME:
0.649832
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:47:23) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("adhs:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
from numpy import *

t = array(
a = t.shape[0]
b = t.shape[1]

-- EXECUTION TIME:
0.689115
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:47:44) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("adhs:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
from numpy import *

t = array(eval(input("hds:"))
a = t.shape[0]
b = t.shape[1]

-- EXECUTION TIME:
0.689332
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:47:44) 
-- CODE:
from numpy import *
from numpy.linalg import*

x = array(eval(input("adhs:"))
y = shape(x)[1]
w = zeros(y, dtype = int)

for i in range(size(w)):
	w[i] = sum(x[:,i])

for i in range(size(w)):
	if w[i] == max(w):
		z = i + 1
		print(z)	
from numpy import *

t = array(eval(input("hds:"))
a = t.shape[0]
b = t.shape[1]

-- EXECUTION TIME:
1.46688
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 5
    y = shape(x)[1]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
